--- a/index2.html
+++ b/index2.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="index.js"></script>
 </head>
 <body background="bax.gif"></body>
- 
-    
+
+  <a href="index3.html"><center><h2>INNERVISION </h2></center> </a>
 
 
 
