--- a/index4.html
+++ b/index4.html
@@ -8,7 +8,7 @@
     <style>
         body{
 
-            background-color: darkslategray;
+            background-color: rgb(47, 63, 63);
         }
         .camgirl {
             height: 70px;
@@ -17,12 +17,21 @@
     </style>
 </head>
 <body>
+    <div>
     <h2 style="color: magenta;">¡HERE´S WHERE THE MAGIC BEGIN!</h2>
-        <video width="420" height="240" controls> 
-            <source src="dt2.mp4" type="video/mp4">
+        <div class="vide2-container">
+            <video width="420" height="240" controls class="vide2">
+                <source src="dt2.mp4" type="video/mp4">
+            </video>
+        </div>
+    
+        <div class="camgirl-container">
+            <img src="cam.gif" class="camgirl">
+        </div>
+</div>
 
-
-        </video>
+</body>
+</html>
 
         <img src="cam.gif" class="camgirl">
 
