--- a/index4.html
+++ b/index4.html
@@ -26,6 +26,7 @@
         </div>
     
         <div class="camgirl-container">
+            <a href="https://es.stripchat.com" target="_blank">
             <img src="cam.gif" class="camgirl">
         </div>
 </div>
