--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body background="bax.gif">
 
-          
+             <div>
         <form class="passform" id="loginForm">
 
-            <h1 style="color: red;">fknmorb</h1>
+            <h1 style="color: red;">ÆNIMA </h1>
 
 
             <label for="password" style="color: red;">password</label>
@@ -26,6 +26,8 @@
 
 
         </form>
+             </div> 
+             
 
 
 </body>
