--- a/index5.html
+++ b/index5.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sex</title>
     <script src="index.js"></script>
 </head>
-<body background="bax.gif"></body>
+<body background="bax.gif">
 
-  <a href="index3.html"><center><h2>INNERVISION </h2></center> </a>
 
-  <a href="index2,5.html"><center><h2>DR.T </h2></center> </a>
 
+    
 </body>
 </html>
