--- a/index3.html
+++ b/index3.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <link rel="stylesheet" href="style2.css">
+  <style>
         body{
 
             background-color: black;
         }
+
+
+
     </style>
 
 </head>
@@ -16,6 +20,12 @@
 
 <a href="index4.html"> <center><img src="eye.gif"></center> </a>
 
-    
+
+<div>
+
+ <a> <img src="boton rojo.png" alt="" class="button"></a>
+
+</div>
+
 </body>
 </html>
