--- a/index2,5.html
+++ b/index2,5.html
@@ -3,26 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DR.T CONSULTORY</title>
+    <link rel="stylesheet" type="text/css" href="style2.css">
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
 </head>
+<body>
+<div class="container">
 
-<style>
-    body{
+<div class="DRT">
+    <img src="okdoc-2.gif">
+</div>
 
-        background-color: black;
-    }
+<div class="PC"><img src="pc.png">
+/div>
 
+<div class="DRTT">
+    <p style="color: red;" >dr.t_computer.exe</p>
+    <p style="color: red;">dr.t_textbook.exe</p>
+    <p style="color: red;">dr.t_experiments.exe</p>
+</div>
 
+<p id="ip">Obteniendo dirección IP...</p>
 
-</style>
-
-    
-
-<a <center><img src="moke.gif"></center> </a>
-
-
-
-
+<script src="script.js"></script>
+<script src="ip.js"></script>
+</div>
 
 </body>
 </html>
