--- a/index5.html
+++ b/index5.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sex</title>
-    <script src="index.js"></script>
+    <script src="ip.js"></script>
 </head>
 <body background="bax.gif">
 
-
+    <p id="ip" style="color: red;">Obteniendo dirección IP...</p>
+    <script src="script.js"></script>
 
     
 </body>
